// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<span
  className=" rounded bg-emerald-800 py-1 px-2 text-sm text-gray-100"
>
  <a
    href="/tags/タグ"
  >
    タグ
  </a>
</span>
`;

exports[`Tag without link renders correctly 1`] = `
<span
  className=" rounded bg-emerald-800 py-1 px-2 text-sm text-gray-100"
>
  タグ
</span>
`;
